--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
     "axios-oauth-client": "^1.5.0",
     "formik": "^2.2.9",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.4.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.2",
     "react-router": "^6.3.0",
+    "react-router-bootstrap": "^0.26.1",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "react-spinners": "^0.13.2",
